fix for img squash in gallery (landscape mode/ screen width > height)

--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ img[src="assets/svg/navHome.svg"] {
     text-shadow: -1px 1px 1px #fafafa, -2px 0px 4px #0005;
     padding: clamp(0.15rem, 2%, 0.3rem);
     width: min(54ch, 90%);
-    te
+    
 }
 
 .media-popup .con img {
@@ -366,6 +366,23 @@ img[src="assets/svg/navHome.svg"] {
     border: 1px solid rgba(11, 33, 66, 0.43);
     box-shadow: 0px 13px 21px -7px rgb(5 15 33 / 80%);
 }
+
+
+@media screen and (min-height: 400px)
+{
+ 
+    .media-popup .con::-webkit-scrollbar {
+        width: 1em;
+    } 
+    .media-popup .con::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    }
+    .media-popup .con::-webkit-scrollbar-thumb {
+        background: linear-gradient(45deg, #0005, #2224);
+        border-radius: 12px;
+        
+      }
+} 
 
 .media-popup .con .thumbs-up-down {
     display: flex;
